desafio primeiro-projeto-node

--- a/package.json
+++ b/package.json
@@ -31,5 +31,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "uuid": "^8.3.0"
-  }
+  },
+  "repository": "https://github.com/tpabarbosa/primeiro-projeto-node.git",
+  "author": "Tatiana Barbosa <tpabarbosa@yahoo.com.br>"
 }
